--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:h2:mem:./db
+spring.datasource.platform=h2
+spring.datasource.url=jdbc:h2:mem:db
 spring.h2.console.enabled=true
 spring.h2.console.path=/console
+
+spring.jpa.hibernate.ddl-auto=create
 
 spring.datasource.initialization-mode=always
 spring.datasource.data= classpath:/data.sql
