OneToMany Backpack->Notepad

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.h2.console.path=/console
 
 spring.jpa.hibernate.ddl-auto=create
 
-spring.datasource.initialization-mode=always
-spring.datasource.data= classpath:/data.sql
+!spring.datasource.initialization-mode=always
+!spring.datasource.data= classpath:/data.sql
